full my project

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tiptap/starter-kit": "^3.15.0",
     "axios": "^1.13.2",
     "bn.js": "^5.2.2",
+    "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
