--- a/package.json
+++ b/package.json
@@ -84,7 +84,9 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "javascript-obfuscator": "^5.3.0",
     "postcss": "^8.5.6",
+    "rollup-plugin-javascript-obfuscator": "^1.0.4",
     "vite": "^7.3.1",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0"
